--- a/Display/dashboard.html
+++ b/Display/dashboard.html
@@ -12,10 +12,10 @@
       <h2>Admin Panel Sendit</h2>
       <ul>
         <li>
-          <a href="#"><i class="fas fa-home"></i> Dashboard</a>
+          <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
         </li>
         <li>
-          <a href="#"><i class="fas fa-users"></i> Users</a>
+          <a href="users.html"><i class="fas fa-users"></i> Users</a>
         </li>
         <li>
           <a href="#"><i class="fas fa-shopping-cart"></i> Orders</a>
