--- a/Display/dashboard.html
+++ b/Display/dashboard.html
@@ -3,31 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Panel Sendit</title>
+    <title>Admin Panel Sendit - Dashboard</title>
     <link rel="stylesheet" href="./../Css/styleAdmin.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   </head>
   <body>
-    <div class="sidebar">
-      <h2>Admin Panel Sendit</h2>
-      <ul>
-        <li>
-          <a href="#"><i class="fas fa-home"></i> Dashboard</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-users"></i> Users</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-shopping-cart"></i> Orders</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-question-circle"></i> Help</a>
-        </li>
-      </ul>
-    </div>
+    <!-- Sidebar akan dimuat menggunakan Fetch API -->
+    <div id="sidebar-container"></div>
+
     <div class="main-content">
       <h1>Admin Dashboard</h1>
       <div class="dashboard-header">
@@ -48,41 +31,15 @@
           <p id="active-users">789</p>
         </div>
       </div>
-      <div class="sales-overview">
-        <h2>Sales Overview</h2>
-        <canvas id="sales-chart"></canvas>
-      </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-    <script>
-      // Sample data for the chart
-      const salesData = {
-        labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun"],
-        datasets: [
-          {
-            label: "Sales",
-            data: [4000, 3000, 5000, 4500, 6000, 5500],
-            backgroundColor: "rgba(54, 162, 235, 0.5)",
-            borderColor: "rgba(54, 162, 235, 1)",
-            borderWidth: 1,
-          },
-        ],
-      };
 
-      // Create the chart
-      const ctx = document.getElementById("sales-chart").getContext("2d");
-      new Chart(ctx, {
-        type: "bar",
-        data: salesData,
-        options: {
-          responsive: true,
-          scales: {
-            y: {
-              beginAtZero: true,
-            },
-          },
-        },
-      });
+    <script>
+      fetch("sidebar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("sidebar-container").innerHTML = data;
+        })
+        .catch((error) => console.error("Error fetching sidebar:", error));
     </script>
   </body>
 </html>
