added login and regist with js validations

--- a/Display/orders.html
+++ b/Display/orders.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Admin Panel Sendit</title>
-    <link rel="stylesheet" href="./../css/styleDashboard.css">
+    <title>Orders - Admin Panel Sendit</title>
+    <link rel="stylesheet" href="./../css/styleOrders.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -18,9 +18,9 @@
         <aside class="sidebar" id="sidebar">
             <h2>Admin Panel Sendit</h2>
             <ul>
-                <li><a href="dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="#"><i class="fas fa-users"></i> Users</a></li>
-                <li><a href="orders.html"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+                <li><a href="orders.html" class="active"><i class="fas fa-shopping-cart"></i> Orders</a></li>
                 <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
                 <li><a href="#"><i class="fas fa-question-circle"></i> Help</a></li>
                 <li><a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
@@ -30,15 +30,10 @@
         <!-- Main Content -->
         <main class="main-content">
             <div class="dashboard-header">
-                <h1>Admin Dashboard</h1>
+                <h1>Orders</h1>
             </div>
 
             <div class="dashboard-cards">
-                <div class="dashboard-card">
-                    <h3>Total Users</h3>
-                    <p>1,234</p>
-                </div>
-
                 <div class="dashboard-card">
                     <h3>Total Orders</h3>
                     <p>56</p>
@@ -48,17 +43,9 @@
                     <h3>Total Revenue</h3>
                     <p>$12,345</p>
                 </div>
-
-                <div class="dashboard-card">
-                    <h3>Active Users</h3>
-                    <p>789</p>
-                </div>
             </div>
 
-            <div class="sales-overview">
-                <h2>Sales Overview</h2>
-                <!-- Add your chart or statistics here -->
-            </div>
+
         </main>
     </div>
 
