--- a/Display/users.html
+++ b/Display/users.html
@@ -6,7 +6,7 @@
     <title>Users Page</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/Css/styleUsers.css" />
+    <link rel="stylesheet" href="./../Css/styleUsers.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   </head>
   <body>
@@ -20,7 +20,7 @@
           <a href="users.html"><i class="fas fa-users"></i> Users</a>
         </li>
         <li>
-          <a href="#"><i class="fas fa-shopping-cart"></i> Orders</a>
+          <a href="orders.html"><i class="fas fa-shopping-cart"></i> Orders</a>
         </li>
         <li>
           <a href="#"><i class="fas fa-cog"></i> Settings</a>
