added login and register

--- a/Display/sidebar.html
+++ b/Display/sidebar.html
@@ -17,5 +17,9 @@
     <li>
       <a href="#"><i class="fas fa-question-circle"></i> Help</a>
     </li>
+    <li>
+      <a href="login.html" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
+    </li>
   </ul>
 </div>
+<script src="./../js/scriptLoginRegis.js"></script>
