--- a/Display/dashboard.html
+++ b/Display/dashboard.html
@@ -98,5 +98,21 @@
         })
         .catch((error) => console.error("Error fetching dashboard data:", error));
     </script>
+        <script src="./../js/scriptLoginRegis.js"></script>
+        <script>
+                const logoutBtn = document.getElementById('logout-btn');
+      if (logoutBtn) {
+          logoutBtn.addEventListener('click', function (e) {
+              e.preventDefault();
+              // Here you would typically send a request to your server to invalidate the session
+              // For this example, we'll just redirect to the login page
+              const confirmLogout = confirm('Are you sure you want to log out?');
+              if (confirmLogout) {
+                  console.log('User logged out');
+                  window.location.href = 'login.html';
+              }
+          });
+      }
+        </script>
   </body>
 </html>
