--- a/Display/users.html
+++ b/Display/users.html
@@ -6,30 +6,11 @@
     <title>Users Page</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="/Css/styleUsers.css" />
+    <link rel="stylesheet" href="./../Css/styleUsers.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   </head>
   <body>
-    <div class="sidebar">
-      <h2>Admin Panel Sendit</h2>
-      <ul>
-        <li>
-          <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
-        </li>
-        <li>
-          <a href="users.html"><i class="fas fa-users"></i> Users</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-shopping-cart"></i> Orders</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-cog"></i> Settings</a>
-        </li>
-        <li>
-          <a href="#"><i class="fas fa-question-circle"></i> Help</a>
-        </li>
-      </ul>
-    </div>
+    <div id="sidebar-container"></div>
 
     <div class="main-content">
       <h1>Users</h1>
@@ -71,6 +52,13 @@
     </div>
 
     <script>
+            fetch("sidebar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("sidebar-container").innerHTML = data;
+        })
+        .catch((error) => console.error("Error fetching sidebar:", error));
+        
       $(document).ready(function () {
         $.getJSON("/JSON/usersData.json", function (usersData) {
           const $tableBody = $("#users-table tbody");
