--- a/Display/orders.html
+++ b/Display/orders.html
@@ -69,7 +69,7 @@
         </tr>
       </thead>
       <tbody>
-        <!-- data asal dulu ya ges ya -->
+        <!-- data asal dulu ya ges -->
         <tr>
           <td>Barang 1</td>
           <td>5 kg</td>
