revisi css dan js Hasan

--- a/Display/dashboard.html
+++ b/Display/dashboard.html
@@ -73,7 +73,7 @@
           // Create chart
           const ctx = document.getElementById("roleChart").getContext("2d");
           new Chart(ctx, {
-            type: "line",
+            type: "bar",
             data: {
               labels: transactionDates,
               datasets: [
